# Diamond_Pipeline

./: .gitignore  README.md  analyze_dat_problem.py  analyze_segment2.py  analyze_tdr.py  compare_dat_files.py  test_static_weighting.cpp
Control_analysis/:  Assembly-Launch-Process-Return.ipynb  Assembly.ipynb  Launch.ipynb  Lookup_Table.ipynb  Measurement.ipynb
Data_link/DWF_Huazhen_c4/: organize_files.sh  process_tdr_files.sh  process_tdr_files_safe.sh  rename_files.sh
Data_link/DWF_Huazhen_c4/1/: n1363_000000_des.tdr
Data_link/DWF_Huazhen_c4/1e-1/: n1362_000000_des.tdr
Data_link/DWF_Huazhen_c4/1e-2/: n1360_000000_des.tdr
Data_link/DWF_Huazhen_c4/1e-3/: n1358_000000_des.tdr
Data_link/DWF_Huazhen_c4/5e-2/: n1361_000000_des.tdr
Data_link/DWF_Huazhen_c4/5e-3/: n1359_000000_des.tdr
Garfield_workplace/: Diamond_4p.C  LUT.csv  run_tpa_simulation.sh
Garfield_workplace/Gem/: gem.C
Ground_control/: Launch.ipynb  Lookup_Table.ipynb  Measurement.ipynb
Ground_control/Garfield_satellite/: CMakeLists.txt  Diamond_4p.C  run_tpa_simulation.sh
